# faker-endpoints

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
endpointer/: manage.py
endpointer/endpointer/: asgi.py  settings.py  urls.py  wsgi.py
endpointer/rest/: endpoints.py  models.py  oa.py  views.py
endpointer/rest/migrations/: 0001_initial.py
endpointer/rest/templates/: application  applications  book  books  job  person  persons  pet  pets  pilot  team
