[project]
name = "endpointer"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Mercado",email = "fernando.mercado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "faker (>=37.5.3,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "endpointer", from = "src"}]
package-mode = false